--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -3,6 +3,8 @@
 # Check https://circleci.com/docs/2.0/language-php/ for more details
 #
 version: 2
+orbs:
+  codecov: codecov/codecov@1.0.2
 jobs:
   build:
     docker:
@@ -38,22 +40,9 @@ jobs:
           key: v1-dependencies-{{ checksum "composer.json" }}
           paths:
             - ./vendor
-    #   - restore_cache:
-    #       keys:
-    #         - node-v1-{{ checksum "package.json" }}
-    #         - node-v1-
-    #   - run: yarn install
-    #   - save_cache:
-    #       key: node-v1-{{ checksum "package.json" }}
-    #       paths:
-    #         - node_modules
 
-      # prepare the database
-      #- run: touch storage/testing.sqlite
-      #- run: php artisan migrate --env=testing --database=sqlite_testing --force
-
-      # run tests with phpunit or codecept
       - run: composer test
-      #- run: ./vendor/bin/phpunit
-      #- run: ./vendor/bin/codecept build
-      #- run: ./vendor/bin/codecept run
+
+      - codecov/upload:
+          file: ./build/logs/clover.xml
+
