--- a/composer.json
+++ b/composer.json
@@ -16,8 +16,8 @@
         }
     ],
     "require": {
-        "php": "^7.2",
-        "illuminate/support": "^5.8|^6.0"
+        "php": ">=7.1",
+        "illuminate/support": "^5.6|^5.7|^5.8|^6.0"
     },
     "require-dev": {
         "orchestra/testbench": "3.8.*",
